<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="32dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_app_logo"
            app:shapeAppearance="@style/Avatar"
            app:strokeColor="?dividerColor"
            app:strokeWidth="1dp" />

        <TextView
            android:id="@+id/usernameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/low"
            android:textAppearance="?textAppearanceBody1"
            tools:text="@string/guest_user" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:divider="@drawable/shape_divider"
            android:orientation="vertical"
            android:showDividers="middle|beginning|end">

            <TextView
                android:id="@+id/editProfileBtn"
                style="@style/ProfileLinks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profileEdit"
                app:drawableStartCompat="@drawable/ic_profile" />

            <TextView
                android:id="@+id/favoriteProductsBtn"
                style="@style/ProfileLinks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favorites"
                app:drawableStartCompat="@drawable/ic_favorites" />

            <TextView
                android:id="@+id/orderHistoryBtn"
                style="@style/ProfileLinks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/orderHistory"
                app:drawableStartCompat="@drawable/ic_order_history" />

            <TextView
                android:id="@+id/authBtn"
                style="@style/ProfileLinks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signIn"
                app:drawableStartCompat="@drawable/ic_sign_in" />
        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>