<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_app_logo"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/high"
                    android:text="@string/signInToAccount"
                    android:textAppearance="?textAppearanceHeadline5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/low"
                    android:alpha="0.8"
                    android:text="@string/enterEmailAndPassword"
                    android:textAppearance="?textAppearanceBody1" />

                <EditText
                    android:id="@+id/emailEditTextSignIn"
                    style="@style/AppAuthEditTextStyle"
                    android:layout_width="@dimen/authEditTextWidth"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/veryHigh"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/passwordEditTextSignIn"
                    style="@style/AppAuthEditTextStyle"
                    android:layout_width="@dimen/authEditTextWidth"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/high"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="@dimen/high">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/singInMaterialButton"
                        android:backgroundTint="?colorOnBackground"
                        android:textColor="?colorSecondary"
                        app:cornerRadius="@dimen/normal"
                        android:fontFamily="@font/primary_bold"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="60dp"
                        android:layout_marginEnd="60dp"
                        android:gravity="center"
                        android:text="@string/singIn" />

                    <ProgressBar
                        android:id="@+id/progressBarSignInButton"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:indeterminateTint="?progressBarColor"
                        android:padding="@dimen/low"
                        android:visibility="gone" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/high"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.4"
                    android:text="@string/doHaveNotAnAccount"
                    android:textAppearance="?textAppearanceBody1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signUpLinkMaterialButtonSignIn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/primary_bold"
                    android:text="@string/pleaseSignUp" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>